--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js",
-    "heroku-postbuild": "cd waste-manifest-app && npm install && npm run build"
+    "heroku-postbuild": "cd waste-manifest-app && npm install && npm run build",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "express": "^4.18.2"
