--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
   "scripts": {
     "start": "node backend/server.js",
     "heroku-postbuild": "cd waste-manifest-app && npm install && npm run build",
-    "build": "react-scripts build"
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "express": "^4.18.2"
