--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "react-scripts": "5.0.1"
   },
   "engines": {
     "node": ">=18"
