--- a/waste-manifest-app/.env
+++ b/waste-manifest-app/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL=waste-manifest-app-6a2146567071.herokuapp.com
+REACT_APP_API_URL=https://waste-manifest-app-6a2146567071.herokuapp.com
