--- a/waste-manifest-app/package.json
+++ b/waste-manifest-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "file-saver": "^2.0.5",
     "file-server": "^2.2.1",
+    "jwt-decode": "^4.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
